# guess-who-telegram-bot

./: DictOfPeople.py  PixledPhoto.py  README.md  bot.py  pyproject.toml  resize_python.py  stickers_function.py
